# Poselib-hf

./: CMakeLists.txt  setup.py
PoseLib/: CMakeLists.txt  camera_pose.h  robust.cc  robust.h  types.h
PoseLib/misc/: Polynomial.h  PolynomialInternal.h  decompositions.cc  decompositions.h
PoseLib/robust/: bundle.cc  bundle.h  jacobian_impl.h  lm_impl.h  ransac.cc  ransac.h  ransac_impl.h  utils.cc  utils.h
PoseLib/robust/estimators/: homography_focal.cc  homography_focal.h  relative_pose.cc  relative_pose.h
PoseLib/solvers/: homo3f.cc  homo3f.h  homo3f_utils.cc  homo3f_utils.h  plane_parallax_shared_focal.cc  plane_parallax_shared_focal.h  relpose_6pt_focal.cc  relpose_6pt_onefocal.cc  relpose_6pt_onefocal.h  threeview_hc.cc  threeview_hc.h
PoseLib/solvers/var/: coeff.h  coeffs_svar_eq1.cc  coeffs_svar_eq2.cc  coeffs_svar_eq3.cc  coeffs_svar_eq4.cc  coeffs_svar_eq5.cc  coeffs_svar_eq6.cc  coeffs_svar_eq7.cc  coeffs_var_eq1.cc  coeffs_var_eq2.cc  coeffs_var_eq3.cc  coeffs_var_eq4.cc  coeffs_var_eq5.cc  coeffs_var_eq6.cc  coeffs_var_eq7.cc
pybind/: helpers.h  pyposelib.cc
